# gitaur

./: .gitignore  .taplo.toml  CLAUDE.md  Cargo.toml  README.md  clippy.toml  codecov.yml  justfile  let-s-start-planning-our-scalable-flamingo.md
.cargo/: config.toml
.github/workflows/: aur-publish.yml  auto-assign-issues.yml  ci.yml  release.yml  screencasts.yml
demos/: build.sh  demos.json  seed-ctrlc-repo-refresh.sh  transcript-scrub.sed
docs/: ARCHITECTURE.md  COMPARISON.md  FETCH_OPTIMIZATION.md  PROFILING.md  RESOLUTION_FLOW.md  TESTING.md  TODO.md  UPDATE_LOOP.md  resolution-flow.html
docs/plans/: bugs.md  gpg-key-auto-import.md  screencasts.md  shell-ui.md  shell-ux.md
examples/: deep_strata.rs  demo_ctrlc_quit.rs  demo_ctrlc_repo_refresh.rs  demo_search_install.rs  find_pkgbase_only.rs  install_offer_e2e.rs  picker_e2e.rs  shell_apply_failure_e2e.rs  shell_aur_pin_e2e.rs  shell_bootstrap_decline_e2e.rs  shell_bootstrap_later_e2e.rs  shell_built_tag_e2e.rs  shell_cart_e2e.rs  shell_conflict_e2e.rs  shell_ctrl_c_e2e.rs  shell_ctrl_c_probe.rs  shell_info_e2e.rs  shell_preflight_e2e.rs  shell_provides_hint_e2e.rs  shell_remove_e2e.rs  shell_search_seed_e2e.rs  shell_splash_blink_e2e.rs  shell_split_sibling_e2e.rs  shell_undo_e2e.rs  shell_upgrade_e2e.rs  sigint_forward_stress.rs  tarpit.rs
packaging/aur/: PKGBUILD.in
pty-harness/: Cargo.toml
pty-harness/src/: cast.rs  lib.rs
scripts/: coverage.sh  profile-refresh.sh  symbolize-profile.py
src/: build.rs  cli.rs  config.rs  context.rs  error.rs  git.rs  index.rs  interrupt.rs  lib.rs  logging.rs  main.rs  mirror.rs  names.rs  pacman.rs  paths.rs  resolver.rs  rotate.rs  runopts.rs  system.rs  testing.rs  trace.rs  ui.rs  units.rs  version.rs
src/cli/: dispatch.rs  flags.rs  mod.rs  search.rs  shell.rs  upgrade_loop.rs
src/cli/shell/: cart.rs  command.rs  complete.rs  env.rs  help.rs  repl.rs  resolved.rs  selector.rs  staging.rs  testenv.rs  upgrade.rs  verbs.rs
src/config/: defaults.rs  mod.rs
src/index/: build.rs  info.rs  lookup.rs  mod.rs  schema.rs  secondary.rs  srcinfo.rs  update.rs
src/logging/: chrome.rs
src/mirror/: clone.rs  consent.rs  fetch.rs  mod.rs  sideband.rs  worktree.rs
src/pacman/: alpm_db.rs  dload.rs  invoke.rs  mod.rs  preflight.rs  sync.rs  vercmp.rs  verdiff.rs
src/resolver/: classify.rs  conflict.rs  mod.rs  pkgbase_expand.rs  topo.rs
src/ui/: banner.rs  change_set.rs  cost.rs  freshness.rs  gix_progress.rs  grid.rs  progress.rs  prompts.rs  search_layout.rs  search_table.rs  tables.rs
tests/: build_worker_shares_repo.rs  clone_refs_layout.rs  fake_mirror.rs  full_build_rusage.rs  picker_artifacts.rs  pkgbase_expand.rs  review_diff_history.rs  stale_index_recovery.rs
tests/container/: Dockerfile  lib.sh  run.sh  setup-fixtures.sh
tests/container/extended/: .scope  01_fetch_idle_timeout.sh  02_sigint_bails_build.sh  04_shell_upgrade_repo.sh  07_shell_cart_apply.sh  08_shell_search_seed.sh  09_shell_undo.sh  10_shell_info_repo.sh  11_sysupgrade_preflight.sh  12_shell_first_launch.sh  13_provides_virtual_resolves.sh  14_install_hook_runs.sh  15_rebuild_after_artifact_deleted.sh  16_declined_install_keeps_artifacts.sh  17_sc_clears_worktrees.sh  18_sy_incremental_fetch.sh  19_syy_force_reclone.sh  20_mirror_unreachable.sh  21_color_never_strips_ansi.sh  22_rns_removes_with_deps.sh  23_u_install_local_file.sh  24_help_for_unknown_op.sh  25_missing_dep_errors_with_hint.sh  26_parallel_invocations_serialized.sh  27_shell_upgrade_aur_built_tag.sh  28_shell_upgrade_provides_hint.sh  29_shell_upgrade_split_sibling.sh  30_shell_apply_failure_keeps_cart.sh  31_shell_ctrl_c_bails_to_prompt.sh  32_shell_remove_stages_uninstall.sh  33_demo_search_install.sh  37_shell_splash_blink.sh  38_demo_ctrlc_quit.sh  39_demo_ctrlc_repo_refresh.sh  40_shell_aur_pin.sh  41_shell_conflict_reject.sh
tests/container/fixtures/aurpin/: PKGBUILD
tests/container/fixtures/aurpin-repo/: PKGBUILD
tests/container/fixtures/loop-repo/: PKGBUILD
tests/container/fixtures/repo-base/: PKGBUILD
tests/container/fixtures/repo-helper-lib/: PKGBUILD
tests/container/fixtures/repo-with-dep/: PKGBUILD
tests/container/fixtures/test-bisq-shape/: PKGBUILD
tests/container/fixtures/test-breaks-dep/: PKGBUILD
tests/container/fixtures/test-breaks-dep-old/: PKGBUILD
tests/container/fixtures/test-checkdep/: PKGBUILD
tests/container/fixtures/test-collision-multi/: PKGBUILD
tests/container/fixtures/test-collision-otf/: PKGBUILD
tests/container/fixtures/test-conflict-aur/: PKGBUILD
tests/container/fixtures/test-conflict-pre/: PKGBUILD
tests/container/fixtures/test-csort-a/: PKGBUILD
tests/container/fixtures/test-csort-b/: PKGBUILD
tests/container/fixtures/test-csort-c/: PKGBUILD
tests/container/fixtures/test-cycle-a/: PKGBUILD
tests/container/fixtures/test-cycle-b/: PKGBUILD
tests/container/fixtures/test-epoch-foreign/: PKGBUILD
tests/container/smoke/: 01_install_repo_pkg.sh  02_install_already_installed.sh  03_install_aur_pkg.sh  04_aur_with_makedep.sh  05_aur_with_aur_dep.sh  06_install_split_pkg.sh  07_mixed_repo_and_aur.sh  08_asdeps_flag.sh  09_missing_index_repo_works.sh  10_missing_index_aur_errors.sh  11_pacman_wins_over_aur.sh  12_pacman_passthrough.sh  13_search_and_info.sh  14_no_targets.sh  15_help.sh  16_deep_make_chain.sh  17_diamond_make_graph.sh  18_mixed_dep_and_make.sh  19_checkdep_strata.sh  20_split_pkg_as_makedep.sh  21_makedep_via_repo.sh  22_cycle_makedep.sh  23_install_by_pkgbase.sh  24_install_by_scoped_provides.sh  25_pkgname_collision_with_another_pkgbase.sh  26_install_split_single_pkgname.sh  26_pacman_op_passthrough.sh  27_review_before_build_ordering.sh  27_su_escalates_to_sudo.sh  28_build_failure_isolation.sh  29_failed_dep_skips_dependents.sh  30_makepkg_log_captured.sh  31_provides_rename_review.sh  32_multi_provides_hint.sh  33_syu_installed_virtual_hint.sh  34_makepkg_pty_colour.sh  35_pkgname_beats_stale_replaces.sh  36_replaces_rename_review.sh  37_provides_single_hit.sh  38_pkgbase_provides_by_legacy.sh  (+30 more)
(+50 files in other folders)
