[package]
name = "gitaur"
version = "0.1.0"
edition = "2021"
description = "yay-like AUR helper backed by the github.com/archlinux/aur mirror"
license = "MIT"

[lib]
name = "gitaur"
path = "src/lib.rs"

[[bin]]
name = "gitaur"
path = "src/main.rs"

[dependencies]
# Pinned to nikicat/gitoxide#b-plus-c-integration until the two upstream PRs
# https://github.com/GitoxideLabs/gitoxide/pull/2604 (gix-ref: skip name validation
# in packed-refs binary search) and #2605 (gix: cache packed-refs in a HashMap during
# fetch update_refs) land in a published gix release. Together they bring
# `gitaur -Sy` against the AUR mirror from ~11s to ~5s (≈ git fetch parity).
gix = { git = "https://github.com/nikicat/gitoxide", rev = "7606d2ed1", features = [
  "blocking-http-transport-reqwest-rust-tls",
  "worktree-mutation",
] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
alpm = "4"
alpm-utils = "4"
pacmanconf = "3"
rkyv = { version = "0.8", features = ["bytecheck"] }
memmap2 = "0.9"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"
dirs = "5"
regex = "1"
smallvec = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jiff = "0.2"
glob = "0.3"

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
# Baseline groups.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Catch the specific issues feedback has flagged before.
absolute_paths = "warn"          # forces `use` over `crate::a::b::c` chains
needless_pass_by_value = "warn"
redundant_clone = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
unused_async = "warn"
# Common pedantic noise we don't care about in a CLI.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
# Don't fight the `_` underscore-bound naming when we're documenting params.
similar_names = "allow"
