[package]
name = "gitaur"
version = "0.1.0"
edition = "2021"
description = "yay-like AUR helper backed by the github.com/archlinux/aur mirror"
license = "MIT"
repository = "https://github.com/nikicat/gitaur"
keywords = ["aur", "archlinux", "pacman", "package-manager"]
categories = ["command-line-utilities"]

[lib]
name = "gitaur"
path = "src/lib.rs"

[[bin]]
name = "gitaur"
path = "src/main.rs"

[dependencies]
# Pinned to nikicat/gitoxide#b-plus-c-integration until the two upstream PRs
# https://github.com/GitoxideLabs/gitoxide/pull/2604 (gix-ref: skip name validation
# in packed-refs binary search) and #2605 (gix: cache packed-refs in a HashMap during
# fetch update_refs) land in a published gix release. Together they bring
# `gitaur -Sy` against the AUR mirror from ~11s to ~5s (≈ git fetch parity).
gix = { git = "https://github.com/nikicat/gitoxide", rev = "7606d2ed1", features = [
  "blocking-http-transport-reqwest-rust-tls",
  "worktree-mutation",
] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
alpm = "4"
alpm-utils = "4"
pacmanconf = "3"
rkyv = { version = "0.8", features = ["bytecheck"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dialoguer = "0.11"
console = "0.15"
indicatif = "0.17"
anyhow = "1"
thiserror = "1"
dirs = "5"
regex = "1"
smallvec = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
jiff = "0.2"
glob = "0.3"
# Pure-Rust regex backend (fancy-regex) avoids the onig C dep; ~10 transitive
# crates and ~1.5 MB binary growth for bash syntax coloring during PKGBUILD review.
syntect = { version = "5.3", default-features = false, features = [
  "default-fancy",
] }
# makepkg drops colour when stdout isn't a TTY (`[[ -t 2 ]]` check). We spawn it
# under a pty so the build output stays coloured while we still tee it into
# `<worktree>/build.log`. Also used by `tests/picker_artifacts.rs` to drive the
# picker under a real terminal.
portable-pty = "0.9"

[dev-dependencies]
tempfile = "3"
nix = { version = "0.31", features = ["resource"] }
vt100 = "0.16"

[profile.release]
lto = "thin"
codegen-units = 1

[lints.rust]
unsafe_code = "deny"
# Catch `pub` items that aren't actually reachable from the crate root —
# pushes toward `pub(crate)` where wider visibility was unintentional.
unreachable_pub = "warn"
# Pairs with clippy::absolute_paths: flag redundant `crate::`/`self::` prefixes
# on items already in scope via `use`.
unused_qualifications = "warn"
# Discarding a `Drop` type with `let _ =` usually means a forgotten guard,
# lock, or file handle. Explicit `drop(x)` for the rare intentional case.
let_underscore_drop = "warn"

[lints.clippy]
# Baseline groups.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pre-promoted lints — usually high-signal additions over pedantic.
nursery = { level = "warn", priority = -1 }
# Cargo.toml hygiene: duplicate deps, missing metadata fields.
cargo = { level = "warn", priority = -1 }
# Catch the specific issues feedback has flagged before.
absolute_paths = "warn"          # forces `use` over `crate::a::b::c` chains
needless_pass_by_value = "warn"
redundant_clone = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
unused_async = "warn"
# Restriction picks — never want stray instances of these in committed code.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
mem_forget = "warn"
let_underscore_must_use = "warn"
# Force `Arc::clone(&x)` over `x.clone()` so each Arc-ref bump is visible at
# the call site — reinforces the "no Arc without real sharing" rule.
clone_on_ref_ptr = "warn"
# Consistent `to_owned` over `to_string` for `&str` → `String`.
str_to_string = "warn"
# Enforce the modern `foo.rs` + `foo/` layout (already in use) over `mod.rs`.
mod_module_files = "warn"
# Common pedantic noise we don't care about in a CLI.
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
return_self_not_must_use = "allow"
struct_excessive_bools = "allow"
# Don't fight the `_` underscore-bound naming when we're documenting params.
similar_names = "allow"
# Nursery lints that flag legitimate patterns in a CLI / would force `#[allow]`
# sprinkles throughout the code without a real quality gain.
option_if_let_else = "allow"  # rewrite-only, often less readable
or_fun_call = "allow"         # false-positives on cheap functions
redundant_pub_crate = "allow" # `pub(crate)` style preference
# Pinning all transitive crate versions is rarely worth the churn for a CLI.
multiple_crate_versions = "allow"
