[package]
name = "aurox"
version = "0.1.5"
edition = "2024"
description = "AUR helper backed by the github.com/archlinux/aur mirror"
license = "MIT"
repository = "https://github.com/nikicat/aurox"
keywords = ["aur", "archlinux", "pacman", "package-manager"]
categories = ["command-line-utilities"]

# `pty-harness` (the e2e example drivers' shared PTY harness) is a workspace
# member so it shares this Cargo.lock. Outside a workspace, running cargo inside
# its directory would write a second, redundant `pty-harness/Cargo.lock`.
# `default-members` keeps bare `cargo build`/`cargo test` scoped to aurox.
[workspace]
members = ["pty-harness"]
default-members = ["."]

[lib]
name = "aurox"
path = "src/lib.rs"

[[bin]]
name = "aurox"
path = "src/main.rs"

# Dev/profiling helper: reads the per-run span traces in state_dir()/traces/
# and answers "where did the time in span X go?" without a throwaway script.
[[bin]]
name = "aurox-trace"
path = "src/bin/trace.rs"

[dependencies]
# Pinned to nikicat/gitoxide#gitaur-integration for changes not yet in a
# published gix release. The branch is upstream main (post-#2604, gix-ref:
# skip name validation in packed-refs binary search) plus merges of the open
# upstream PRs #2608/#2704/#2705/#2706 and two not-yet-submitted branches
# (mark_all_refs commit-graph, update_refs fast paths), carrying:
#  - a lazy packed-refs name index for fast bulk lookups (PR #2608; replaces
#    the closed #2605 hashmap cache) — with #2604 this brings `aurox -Sy`
#    against the AUR mirror from ~11s to ~5s (≈ git fetch parity);
#  - a gix-transport patch that wraps the curl worker's `perform()` in a
#    `gix_http` "http request" span carrying curl's CURLINFO timing — the only
#    place that timing is reachable (see src/logging/chrome.rs);
#  - a gix-transport `http::Options::download_progress` byte counter the curl
#    backend feeds per response-body chunk — the only live signal during the
#    otherwise-silent v2 `ls-refs` advertisement (many MiB on the AUR mirror);
#    drives the `network` throughput row (see src/ui/gix_progress.rs) (PR #2706);
#  - a `mark mappings` detail span in gix-protocol that splits
#    `mark_complete_and_common_ref`'s per-mapping loop into `find_ms`
#    (packed-ref lookup) vs `commit_ms` (ODB/commit-graph load) — the
#    dominant cost of `receive` on the AUR mirror (see the `tracing-detail`
#    feature below);
#  - a `gix-ref` `try_find_packed_only` fast path that lets the fetch have-set
#    build skip the per-ref loose-ref `open()` syscall for packed refs, cutting
#    `find_ms` on the AUR mirror from ~2.1s to ~0.6s (loose precedence is still
#    honored via a one-time loose-name scan, which only engages at ≥256
#    mappings — a no-op for small fetches) (PR #2704, with the span above);
#  - a `mark_all_refs` fast path that resolves each local ref through the
#    commit-graph (via `get_or_insert_commit`) instead of inflating the object
#    just to check it isn't a tag — only annotated tags / symrefs still peel.
#    Cuts `mark_all_refs` on the AUR mirror from ~3.3s to ~0.3s (depends on the
#    commit-graph aurox now writes after each fetch; see src/git.rs);
#  - the same `try_find_packed_only` fast path applied to `update_refs`, which
#    re-resolved every mapping's local tracking ref (another loose `open()` per
#    ref) when applying fetched updates — cuts its `find_ms` on the AUR mirror
#    from ~1.9s to ~0.4s;
#  - a borrowed `packed::Buffer::try_find` in both the negotiate have-set build
#    and `update_refs`, dropping the per-ref owned-`Reference` allocation;
#  - an `update_refs` fast path that emits the no-op edit for an unchanged direct
#    packed ref without the per-ref `objects.exists()` probe / peel — together
#    these cut `update_refs` self time from ~1.2s to ~0.6s and `mark mappings`
#    `find_ms` by ~120ms on the AUR mirror;
#  - a `gix-ref` transaction fast path that resolves packed-only refs straight
#    from packed-refs when verifying each edit's precondition, skipping the
#    per-ref loose `open()` — the dominant cost of applying the ref transaction
#    (the `apply` span). Cuts that resolution on the AUR mirror from ~640ms to
#    ~240ms (`apply` ~770ms to ~400ms); adds a `ref tx resolve` detail span;
#    locks all edits before resolving any current value to close a CAS race,
#    with each lock's content written eagerly and its fd closed so a
#    thousands-of-refs fetch stays within `ulimit -n` (PR #2705).
gix = { git = "https://github.com/nikicat/gitoxide", rev = "fbbcf79c4", features = [
  # curl-rustls (over reqwest-rust-tls) so gix's low_speed_* / lowSpeedLimit
  # config actually fires — only the curl transport implements it, the
  # reqwest blocking transport silently ignores those fields. Adds libcurl
  # (dyn-linked) but keeps TLS pure-Rust via rustls.
  "blocking-http-transport-curl-rustls",
  "worktree-mutation",
  # Compile in gix's own `coarse!` (INFO) and `detail!` (DEBUG) spans and bridge
  # them to `tracing`. Without this they're zero-cost-removed, leaving the most
  # expensive phase of a fetch — `gix_protocol::fetch::negotiate`'s
  # `mark_complete_and_common_ref()` (the silent local "have"-set build, ~20s of
  # the 25s `receive` span on the AUR mirror) — completely uninstrumented: gix
  # never calls `progress.set_name()` for it, so our GixProgress adapter can't
  # see it. It *is* wrapped in a `gix_trace::detail!("negotiate")` span, which
  # this feature turns into a real DEBUG span on target `gix_protocol::*`,
  # picked up by the `debug`-baseline chrome/file layers in src/logging.rs.
  "tracing-detail",
] }
clap = { version = "4", features = ["derive"] }
rayon = "1.10"
alpm = "5"
alpm-utils = "5"
pacmanconf = "3"
rkyv = { version = "0.8", features = ["bytecheck"] }
memmap2 = "0.9"
serde = { version = "1", features = ["derive"] }
toml = "1"
dialoguer = "0.12"
console = "0.16"
indicatif = "0.18"
anyhow = "1"
thiserror = "2"
dirs = "6"
regex = "1"
# Link-time distributed slice: every `context_local!` self-registers a
# TLS propagator into `context::PROPAGATORS` so `context::Context` can carry
# thread-locals into spawned/rayon workers without a central list to forget.
linkme = "0.3"
smallvec = { version = "1", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Per-run span hierarchy → Chrome/Perfetto trace JSON in `traces/`, so the
# timings of git fetch vs. parallel index rebuild can be inspected as a
# flamegraph (drag the file into https://ui.perfetto.dev).
#
# We bridge our existing `#[instrument]` spans into OpenTelemetry (rather than
# straight to the trace-event format via tracing-chrome) because OTEL `SpanData`
# carries *explicit* start/end timestamps and a real parent tree. That's what
# lets `src/logging/chrome.rs` (our own `SpanExporter`) synthesize the
# `before/after first byte` sub-spans of each `http request` from curl's
# CURLINFO timing — tracing-chrome could only stamp spans at open/close
# wall-clock, never backdate. No collector, no async runtime: a synchronous
# in-process exporter writes the JSON on shutdown.
opentelemetry = { version = "0.32", default-features = false, features = [
  "trace",
] }
opentelemetry_sdk = { version = "0.32", default-features = false, features = [
  "trace",
] }
tracing-opentelemetry = { version = "0.33", default-features = false }
# Serializes the OTEL `SpanData` into Chrome trace-event JSON (src/logging/chrome.rs).
serde_json = "1"
jiff = "0.2"
glob = "0.3"
# Pure-Rust regex backend (fancy-regex) avoids the onig C dep; ~10 transitive
# crates and ~1.5 MB binary growth for bash syntax coloring during PKGBUILD review.
syntect = { version = "5.3", default-features = false, features = [
  "default-fancy",
] }
# makepkg drops colour when stdout isn't a TTY (`[[ -t 2 ]]` check). We spawn it
# under a pty so the build output stays coloured while we still tee it into
# `<worktree>/build.log`. Also used by `tests/picker_artifacts.rs` to drive the
# picker under a real terminal.
portable-pty = "0.9"

# Safe SIGINT handling (no `unsafe` sigaction, which the crate denies): catch a
# Ctrl+C during an AUR build, set a flag, and forward it to makepkg's process
# group instead of letting it kill aurox. See `build::makepkg::run`.
signal-hook = "0.3"

# `nix::sys::signal::killpg` forwards the interrupt to the makepkg process group
# (its own session under the pty). `resource` is also used by the rusage
# integration test, so both features live on this one entry.
nix = { version = "0.31", features = ["resource", "signal"] }

# Per-pkgbase build-time store backing the change-set preview's build-time
# column. `bundled` vendors SQLite so the dep doesn't reach for a system libsqlite
# (Arch ships it but a `--no-default-features` reviewer build might not). The
# schema is one table with two columns; we don't need feature flags.
rusqlite = { version = "0.40", features = ["bundled"] }
rustyline = "18.0.1"
shell-words = "1.1.1"

[dev-dependencies]
tempfile = "3"
vt100 = "0.16"
# PTY test harness shared by the e2e example drivers (examples/*_e2e.rs). Its
# own crate so its API is genuinely `pub` (the drivers are external users),
# sidestepping the bin-crate visibility-lint tension a shared in-example module
# would hit. See `pty-harness/src/lib.rs`.
pty-harness = { path = "pty-harness" }
# Integration tests that drive `bootstrap_clone` need to hand it a
# `MultiProgress`; it's already a normal dep, so cargo unifies the version.
indicatif = "0.18"

[profile.release]
lto = "thin"
codegen-units = 1

[lints.rust]
unsafe_code = "deny"
# Catch `pub` items that aren't actually reachable from the crate root —
# pushes toward `pub(crate)` where wider visibility was unintentional.
unreachable_pub = "warn"
# Pairs with clippy::absolute_paths: flag redundant `crate::`/`self::` prefixes
# on items already in scope via `use`.
unused_qualifications = "warn"
# Discarding a `Drop` type with `let _ =` usually means a forgotten guard,
# lock, or file handle. Explicit `drop(x)` for the rare intentional case.
let_underscore_drop = "warn"
# Force `&Foo<'_>` over `&Foo` when `Foo` has a lifetime parameter — keeps
# borrow scopes visible at call sites, same school as clippy::absolute_paths.
elided_lifetimes_in_paths = "warn"

[lints.clippy]
# Baseline groups.
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pre-promoted lints — usually high-signal additions over pedantic.
nursery = { level = "warn", priority = -1 }
# Cargo.toml hygiene: duplicate deps, missing metadata fields.
cargo = { level = "warn", priority = -1 }
# Catch the specific issues feedback has flagged before.
absolute_paths = "warn"          # forces `use` over `crate::a::b::c` chains
needless_pass_by_value = "warn"
redundant_clone = "warn"
explicit_iter_loop = "warn"
explicit_into_iter_loop = "warn"
unused_async = "warn"
# Restriction picks — never want stray instances of these in committed code.
dbg_macro = "warn"
todo = "warn"
unimplemented = "warn"
mem_forget = "warn"
let_underscore_must_use = "warn"
# Force `Arc::clone(&x)` over `x.clone()` so each Arc-ref bump is visible at
# the call site — reinforces the "no Arc without real sharing" rule.
clone_on_ref_ptr = "warn"
# Consistent `to_owned` over `to_string` for `&str` → `String`.
str_to_string = "warn"
# Enforce the modern `foo.rs` + `foo/` layout (already in use) over `mod.rs`.
mod_module_files = "warn"
# Error-handling discipline — keep error provenance and don't paper over
# fallible paths with panic.
try_err = "warn"            # forbids `Err(e)?` antipattern
map_err_ignore = "warn"     # `.map_err(|_| _)` drops error context
unwrap_in_result = "warn"   # unwrap inside a Result-returning fn
panic_in_result_fn = "warn" # same idea for panic!
# Code-hygiene picks: each one corresponds to a roll-your-own pattern that
# has a cleaner stdlib idiom.
manual_assert = "warn"                   # `if !x { panic!() }` → `assert!`
if_then_some_else_none = "warn"          # → `bool::then(...)`
format_push_string = "warn"              # `s.push_str(&format!(…))` → `write!`
pathbuf_init_then_push = "warn"
verbose_file_reads = "warn"              # `read_to_string` over manual loops
unnecessary_self_imports = "warn"        # `use foo::{self}` is just `use foo`
rest_pat_in_fully_bound_structs = "warn" # superfluous `..` in struct patterns
redundant_type_annotations = "warn"
as_underscore = "warn"                   # opaque `x as _` casts
string_add = "warn"                      # `s + &t` chain
# Type / API hazards — concurrency footguns and stray-bracket noise.
mutex_atomic = "warn"                      # `Mutex<bool>` → `AtomicBool`
rc_buffer = "warn"                         # `Rc<String>` → `Rc<str>`
rc_mutex = "warn"                          # `Rc<Mutex<_>>` (use Arc if shared)
assertions_on_constants = "warn"           # `assert!(true)` etc.
empty_enum_variants_with_brackets = "warn" # `Foo()` over `Foo`
empty_structs_with_brackets = "warn"
infinite_loop = "warn"                     # `loop {}` with no exit
exit = "warn"                              # `std::process::exit` bypasses Drop
# Style / hygiene additions cleared by the matching commit.
shadow_same = "warn"            # `let x = x;` rebind-noop
use_debug = "warn"              # `{:?}` in user-facing output
unneeded_field_pattern = "warn" # all fields `_` → use `..`
needless_raw_strings = "warn"   # `r"…"` without escapes
# Correctness-leaning restriction picks — each catches a real category of
# subtle bug rather than a style preference.
mixed_read_write_in_expression = "warn" # `a[i] = b[i += 1]` order ambiguity
filetype_is_file = "warn"               # `.metadata().is_file()` skips symlinks
path_buf_push_overwrite = "warn"        # `pb.push("/abs")` drops the original
path_ends_with_ext = "warn"             # `Path::ends_with(".rs")` doesn't work
mut_from_ref = "warn"                   # `&T` cast to `&mut T`
non_send_fields_in_send_ty = "warn"     # wrong manual `unsafe impl Send`
unsafe_derive_deserialize = "warn"      # derived `Deserialize` bypasses Send/Sync
print_in_format_impl = "warn"           # `println!` inside `Display::fmt`
let_underscore_future = "warn"          # `let _ = async_fn()` — forgotten `.await`
lossy_float_literal = "warn"            # `let x: f32 = 1.123456789` truncates
suspicious_xor_used_as_pow = "warn"     # `2 ^ 8` is XOR, not exponent
iter_over_hash_type = "warn"            # nondeterministic HashMap/HashSet iter
# Hygiene picks — readable-code preferences, not bug catches.
get_unwrap = "warn"                        # `.get(i).unwrap()` worse than `[i]`
multiple_inherent_impl = "warn"            # `impl Foo` spread across same module
same_name_method = "warn"                  # trait method shadowed by inherent
partial_pub_fields = "warn"                # mixed visibility in struct
string_lit_chars_any = "warn"              # `"abc".chars().any(…)` → `.contains(…)`
char_lit_as_u8 = "warn"                    # `'a' as u8` for ASCII (opaque)
bool_to_int_with_if = "warn"               # `if x { 1 } else { 0 }` → `usize::from`
unnecessary_struct_initialization = "warn" # `Foo { ..other }` no-op
large_stack_arrays = "warn"                # accidental stack overflows
large_include_file = "warn"                # huge `include_str!`/`include_bytes!`
inline_always = "warn"                     # `#[inline(always)]` discouraged
# Cargo feature naming.
redundant_feature_names = "warn" # `feature = "thing-feature"`
negative_feature_names = "warn"  # `feature = "no-X"`
# TODO: lints that match the project's style but are noisy today. Re-probe
# (`cargo clippy ... -W clippy::<lint>`) periodically and adopt once the
# count is fixable in one sitting.
# - unwrap_used (271): mostly tests; would need test-only #[allow] or
#   migrating production unwraps to .expect("invariant").
# - expect_used (44): we use .expect("…") for documented invariants;
#   migration path is unclear.
# - print_stdout (22), print_stderr (34): scope to `ui::` once that module
#   is the only printing surface — currently bin/lib both call println!.
# - question_mark_used (165): silly lint; skip.
# Common pedantic noise we don't care about in a CLI. Hit counts measured
# (2026-05) so we know what each allow is actually suppressing: drop any whose
# count goes to zero on a refactor, and reconsider any that grow large.
module_name_repetitions = "allow" # 8 hits — flat-API names (MirrorRepo, IndexEntry, bootstrap_clone)
must_use_candidate = "allow"      # 56 — pure bureaucracy for a binary
missing_errors_doc = "allow"      # 36 — lib half isn't real public API
missing_panics_doc = "allow"      # 7 — same shape as above
# Nursery lints that flag legitimate patterns in a CLI / would force `#[allow]`
# sprinkles throughout the code without a real quality gain.
option_if_let_else = "allow" # 2 — rewrite-only, often less readable
# Pinning all transitive crate versions is rarely worth the churn for a CLI.
multiple_crate_versions = "allow" # 17 — mostly transitive, not fixable here
